--- a/images/php-fpm/wordpress-web/context/rootfs/etc/nginx/snippets/server-status.conf
+++ b/images/php-fpm/wordpress-web/context/rootfs/etc/nginx/snippets/server-status.conf
@@ -1,8 +1,20 @@
-location ~ ^/(status|ping)$ {
+location = /healthz/nginx {
     allow 127.0.0.1;
     allow 10.0.0.0/8;
     allow 172.16.0.0/12;
     allow 192.168.0.0/16;
+    deny all;
+    access_log off;
+    return 200 "ok";
+}
+
+location ~ ^/healthz/php-fpm-(status|ping)$ {
+    allow 127.0.0.1;
+    allow 10.0.0.0/8;
+    allow 172.16.0.0/12;
+    allow 192.168.0.0/16;
+    deny all;
+    access_log off;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     fastcgi_index index.php;
     include        fastcgi_params;
