--- a/images/php-fpm/shopware-web/context/rootfs/etc/nginx/snippets/server-status.conf
+++ b/images/php-fpm/shopware-web/context/rootfs/etc/nginx/snippets/server-status.conf
@@ -8,7 +8,7 @@ location = /healthz/nginx {
     return 200 "ok";
 }
 
-location ~ ^/healthz/php-fpm-(status|ping)$ {
+location ~ ^/healthz/php-fpm(-status)?$ {
     allow 127.0.0.1;
     allow 10.0.0.0/8;
     allow 172.16.0.0/12;
