--- a/images/php-fpm-rootless/magento2-web/context/rootfs/etc/nginx/conf.d/default.conf.template
+++ b/images/php-fpm-rootless/magento2-web/context/rootfs/etc/nginx/conf.d/default.conf.template
@@ -54,6 +54,7 @@ map $http_x_forwarded_proto $fastcgi_https {
     https on;
 }
 
+include /etc/nginx/snippets.d/http-*.conf;
 include /etc/nginx/snippets/http-*.conf;
 
 server {
@@ -66,6 +67,7 @@ server {
     autoindex off;
     charset UTF-8;
 
+    include /etc/nginx/snippets.d/server-*.conf;
     include /etc/nginx/snippets/server-*.conf;
     include /etc/nginx/available.d/{{ getenv "NGINX_TEMPLATE" "magento2.conf" }};
 }
