chg(images): change varnish client healthcheck url

--- a/images/varnish/context/rootfs/etc/supervisor/conf.d/varnish.conf
+++ b/images/varnish/context/rootfs/etc/supervisor/conf.d/varnish.conf
@@ -18,7 +18,7 @@ restartpause=3
 depends_on=config
 
 [program:varnishncsa-client]
-command=varnishncsa -q 'ReqURL ne "/varnishcheck"' -F '{"Timestamp": "%t", "Varnish-Side": "%{Varnish:side}x", "Age": %{age}o, "Handling": "%{Varnish:handling}x", "Request": "%r", "Status": "%s", "Response-Reason": "%{VSL:RespReason}x", "Fetch-Error": "%{VSL:FetchError}x", "X-Forwarded-For": "%{x-forwarded-for}i", "Remote-User": "%u", "Bytes": "%b", "Time-To-Serve": %D, "User-Agent": "%{User-agent}i", "Referer": "%{Referer}i", "X-Varnish":  "%{x-varnish}o", "X-Magento-Tags": "%{x-magento-tags}o", "X-Magento-Tags-Pattern": "%{x-magento-tags-pattern}o"}'
+command=varnishncsa -q 'ReqURL ne "/healthz/varnish"' -F '{"Timestamp": "%t", "Varnish-Side": "%{Varnish:side}x", "Age": %{age}o, "Handling": "%{Varnish:handling}x", "Request": "%r", "Status": "%s", "Response-Reason": "%{VSL:RespReason}x", "Fetch-Error": "%{VSL:FetchError}x", "X-Forwarded-For": "%{x-forwarded-for}i", "Remote-User": "%u", "Bytes": "%b", "Time-To-Serve": %D, "User-Agent": "%{User-agent}i", "Referer": "%{Referer}i", "X-Varnish":  "%{x-varnish}o", "X-Magento-Tags": "%{x-magento-tags}o", "X-Magento-Tags-Pattern": "%{x-magento-tags-pattern}o"}'
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/fd/1
