--- a/assets/templates/docker-compose/environments/magento2/magento2.splitdb.checkout.base.yml
+++ b/assets/templates/docker-compose/environments/magento2/magento2.splitdb.checkout.base.yml
@@ -27,7 +27,7 @@ services:
       - MYSQL_USER={{ default "magento" $.mysql_user }}
       - MYSQL_PASSWORD={{ default "magento" $.mysql_password }}
     command:
-      - mysqld
+      - {{ $.database_executable }}
       - --max_allowed_packet=1024M
     volumes:
       - checkoutdbdata:/var/lib/mysql
