--- a/assets/templates/docker-compose/environments/includes/db.base.yml
+++ b/assets/templates/docker-compose/environments/includes/db.base.yml
@@ -23,7 +23,7 @@ services:
       - {{ default 3306 $.mysql_expose_target }}:3306
 {{- end }}
     command:
-      - mysqld
+      - {{ $.database_executable }}
       - --max_allowed_packet=1024M
       - --explicit_defaults_for_timestamp=on
 {{ if ge 10.5 (float64 $.mariadb_version) }}
