--- a/.github/workflows/main-docker-image-elasticsearch.yml
+++ b/.github/workflows/main-docker-image-elasticsearch.yml
@@ -77,6 +77,8 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+        with:
+          image: mirror.gcr.io/tonistiigi/binfmt:latest
 
       - name: Set up Docker Buildx
         id: buildx
