--- a/.github/workflows/main-docker-image-php-fpm-rootless-wordpress-web.yml
+++ b/.github/workflows/main-docker-image-php-fpm-rootless-wordpress-web.yml
@@ -70,6 +70,8 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+        with:
+          image: mirror.gcr.io/tonistiigi/binfmt:latest
 
       - name: Set up Docker Buildx
         id: buildx
@@ -190,6 +192,8 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+        with:
+          image: mirror.gcr.io/tonistiigi/binfmt:latest
 
       - name: Set up Docker Buildx
         id: buildx
