--- a/.github/workflows/main-golangci-lint.yml
+++ b/.github/workflows/main-golangci-lint.yml
@@ -31,4 +31,4 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v4
         with:
-          version: latest
+          version: v1.59.1
