--- a/images/php-fpm/magento2-web/context/rootfs/etc/nginx/conf.d/default.conf.template
+++ b/images/php-fpm/magento2-web/context/rootfs/etc/nginx/conf.d/default.conf.template
@@ -49,6 +49,17 @@ map $http_host $MAGE_RUN_TYPE {
 {{- end }}
 }
 
+set_real_ip_from 10.0.0.0/8;
+set_real_ip_from 172.16.0.0/12;
+set_real_ip_from 192.168.0.0/16;
+real_ip_recursive on;
+real_ip_header X-Forwarded-For;
+
+map $http_x_forwarded_for $realip {
+    ~^(\d+\.\d+\.\d+\.\d+) $1;
+    default $remote_addr;
+}
+
 map $http_x_forwarded_proto $fastcgi_https {
     default '';
     https on;
