--- a/images/php-fpm-rootless/magento2-web/context/rootfs/etc/nginx/conf.d/default.conf.template
+++ b/images/php-fpm-rootless/magento2-web/context/rootfs/etc/nginx/conf.d/default.conf.template
@@ -1,6 +1,9 @@
 # default Docker DNS server
 resolver {{ getenv "NGINX_RESOLVER" "127.0.0.11" }};
 
+map_hash_max_size 2048;
+map_hash_bucket_size 256;
+
 # Select upstream backend to use based on presence of Xdebug cookies and Blackfire headers
 map "$http_X_BLACKFIRE_QUERY:$cookie_XDEBUG_SESSION$cookie_XDEBUG_PROFILE$cookie_XDEBUG_TRACE" $fastcgi_backend {
     # Nothing for debug and nothing for blackfire means its a pure request
