chore: add custom docker proxy from secrets

--- a/.github/workflows/main-docker-image-elasticsearch.yml
+++ b/.github/workflows/main-docker-image-elasticsearch.yml
@@ -87,7 +87,7 @@ jobs:
           driver-opts: image=moby/buildkit:master
           config-inline: |
             [registry."docker.io"]
-              mirrors = ["mirror.gcr.io"]
+              mirrors = ["${{ secrets.DOCKER_PROXY }}"]
 
       - uses: supplypike/setup-bin@v3
         with:
