--- a/.github/workflows/main-docker-image-php-fpm-rootless-shopware.yml
+++ b/.github/workflows/main-docker-image-php-fpm-rootless-shopware.yml
@@ -80,7 +80,7 @@ jobs:
           driver-opts: image=moby/buildkit:master
           config-inline: |
             [registry."docker.io"]
-              mirrors = ["mirror.gcr.io"]
+              mirrors = ["${{ secrets.DOCKER_PROXY }}"]
 
       - uses: supplypike/setup-bin@v3
         with:
@@ -202,7 +202,7 @@ jobs:
           driver-opts: image=moby/buildkit:master
           config-inline: |
             [registry."docker.io"]
-              mirrors = ["mirror.gcr.io"]
+              mirrors = ["${{ secrets.DOCKER_PROXY }}"]
 
       - uses: supplypike/setup-bin@v3
         with:
