chore: disable php-fpm base image workflows to run if regular php images are finished as the max depth of workflow chaining is 3

--- a/.github/workflows/main-docker-image-php-fpm-rootless-base.yml
+++ b/.github/workflows/main-docker-image-php-fpm-rootless-base.yml
@@ -3,11 +3,11 @@
 name: Docker Image PHP-FPM Rootless Base
 on:
   workflow_dispatch:
-  workflow_run:
-    workflows: [ "Docker Image PHP/FPM-Loaders" ]
-    branches: [ main ]
-    types:
-      - completed
+  #workflow_run:
+  #  workflows: [ "Docker Image PHP/FPM-Loaders" ]
+  #  branches: [ main ]
+  #  types:
+  #    - completed
   push:
     paths:
       - images/php-fpm-rootless/base/.trigger
