fix: variouse issue with single web containers

--- a/assets/templates/docker-compose/environments/generic-php/generic-php.base.yml
+++ b/assets/templates/docker-compose/environments/generic-php/generic-php.base.yml
@@ -1,7 +1,9 @@
 {{- /* @formatter:off */ -}}
 
 services:
+{{- if not ( isEnabled ( default false $.reward_single_web_container )) }}
   nginx: {}
+{{ end }}
 
   php-fpm: {}
 
