--- a/assets/templates/docker-compose/environments/shopware/shopware.windows.yml
+++ b/assets/templates/docker-compose/environments/shopware/shopware.windows.yml
@@ -10,7 +10,9 @@ x-environment: &environment
   - CHOWN_DIR_LIST=public/media
 
 services:
+{{ if not ( isEnabled ( default false $.reward_single_web_container )) }}
   nginx: { volumes: *volumes }
+{{ end }}
   php-fpm: { volumes: *volumes, environment: *environment }
   php-debug: { volumes: *volumes, environment: *environment }
 {{- if ( default false $.reward_spx ) }}
