--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,7 +1,8 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow
 ---
-name: Run tests
+name: "golangci-lint"
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -10,12 +11,11 @@ on:
       - go.mod
       - go.sum
   pull_request:
-
 permissions:
   contents: read
-
 jobs:
-  test:
+  golangci:
+    name: "Run golangci-lint"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -23,10 +23,12 @@ jobs:
         with:
           fetch-depth: 0
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
         with:
           go-version: 1.23
       - name: Download deps
         run: go mod download -x
-      - name: Test
-        run: go test -race -v ./...
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v4
+        with:
+          version: v1.60.1
