--- a/.github/workflows/main-docker-image-mailbox.yml
+++ b/.github/workflows/main-docker-image-mailbox.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow
 ---
-name: Docker Image Mailbox (mailpit)
+name: "Mailbox (mailpit) • Docker Build"
 on:
   schedule:
     - cron: "0 6 1 * *"
@@ -12,8 +12,8 @@ on:
     branches:
       - main
 jobs:
-  mailbox:
-    name: mailbox
+  build:
+    name: "Build mailbox"
     runs-on: ubuntu-latest
     strategy:
       matrix:
