--- a/.github/workflows/main-docker-image-mariadb.yml
+++ b/.github/workflows/main-docker-image-mariadb.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow
 ---
-name: Docker Image MariaDB
+name: "MariaDB • Docker Build"
 on:
   schedule:
     - cron: "0 6 1 * *"
@@ -12,8 +12,8 @@ on:
     branches:
       - main
 jobs:
-  mariadb:
-    name: mariadb
+  build:
+    name: "Build mariadb"
     runs-on: ubuntu-latest
     strategy:
       matrix:
