--- a/.github/workflows/main-docker-image-opensearch-dashboards.yml
+++ b/.github/workflows/main-docker-image-opensearch-dashboards.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow
 ---
-name: Docker Image Opensearch Dashboards
+name: "Opensearch Dashboards • Docker Build"
 on:
   schedule:
     - cron: "0 6 1 * *"
@@ -12,8 +12,8 @@ on:
     branches:
       - main
 jobs:
-  opensearch-dashboards:
-    name: opensearch-dashboards
+  build:
+    name: "Build opensearch-dashboards"
     runs-on: ubuntu-latest
     strategy:
       matrix:
