--- a/.github/workflows/main-docker-image-php-cli-loaders.yml
+++ b/.github/workflows/main-docker-image-php-cli-loaders.yml
@@ -1,10 +1,10 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow
 ---
-name: Docker Image PHP/CLI-Loaders
+name: "PHP/CLI-Loaders • Docker Build"
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: [ "Docker Image PHP/CLI" ]
+    workflows: [ "PHP/CLI • Docker Build" ]
     branches: [ main ]
     types:
       - completed
@@ -14,8 +14,8 @@ on:
     branches:
       - main
 jobs:
-  php-cli-loaders:
-    name: php/cli-loaders
+  build:
+    name: "Build php/cli-loaders"
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
     strategy:
