--- a/.github/workflows/main-docker-image-php-fpm-rootless-base.yml
+++ b/.github/workflows/main-docker-image-php-fpm-rootless-base.yml
@@ -1,10 +1,10 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow
 ---
-name: Docker Image PHP-FPM Rootless Base
+name: "PHP-FPM Rootless Base • Docker Build"
 on:
   workflow_dispatch:
   #workflow_run:
-  #  workflows: [ "Docker Image PHP/FPM-Loaders" ]
+  #  workflows: [ "PHP/FPM-Loaders • Docker Build" ]
   #  branches: [ main ]
   #  types:
   #    - completed
@@ -14,8 +14,8 @@ on:
     branches:
       - main
 jobs:
-  php-fpm-rootless-base:
-    name: php-fpm-rootless/base
+  build:
+    name: "Build php-fpm-rootless/base"
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
     strategy:
