--- a/.github/workflows/main-docker-image-php-fpm-rootless-blackfire.yml
+++ b/.github/workflows/main-docker-image-php-fpm-rootless-blackfire.yml
@@ -1,10 +1,10 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow
 ---
-name: Docker Image PHP-FPM Rootless Blackfire
+name: "PHP-FPM Rootless Blackfire • Docker Build"
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: [ "Docker Image PHP-FPM Rootless Base" ]
+    workflows: [ "PHP-FPM Rootless Base • Docker Build" ]
     branches: [ main ]
     types:
       - completed
@@ -14,8 +14,8 @@ on:
     branches:
       - main
 jobs:
-  php-fpm-rootless-blackfire:
-    name: php-fpm-rootless/blackfire
+  build:
+    name: "Build php-fpm-rootless/blackfire"
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
     strategy:
