--- a/.github/workflows/main-docker-image-php-fpm-shopware.yml
+++ b/.github/workflows/main-docker-image-php-fpm-shopware.yml
@@ -1,10 +1,10 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow
 ---
-name: Docker Image PHP-FPM Shopware
+name: "PHP-FPM Shopware • Docker Build"
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: [ "Docker Image PHP-FPM Base" ]
+    workflows: [ "PHP-FPM Base • Docker Build" ]
     branches: [ main ]
     types:
       - completed
@@ -14,8 +14,8 @@ on:
     branches:
       - main
 jobs:
-  php-fpm-shopware:
-    name: php-fpm/shopware
+  build:
+    name: "Build php-fpm/shopware"
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
     strategy:
@@ -123,12 +123,12 @@ jobs:
           cache-from: type=registry,ref=${{ vars.DOCKER_REPO }}/php-fpm:${{ matrix.PHP_VERSION }}-shopware-${{ matrix.BASE_IMAGE_NAME }}-${{ matrix.BASE_IMAGE_TAG }}
           cache-to: type=inline
 
-  php-fpm-shopware-apps:
-    name: php-fpm/shopware-apps
+  build-apps:
+    name: "Build php-fpm/shopware-apps"
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
     needs:
-      - php-fpm-shopware
+      - build
     strategy:
       matrix:
         BASE_IMAGE_NAME: [ "debian", "ubuntu" ]
