--- a/.github/workflows/main-docker-image-php-fpm-wordpress-web.yml
+++ b/.github/workflows/main-docker-image-php-fpm-wordpress-web.yml
@@ -1,21 +1,37 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow
 ---
-name: Docker Image PHP-FPM Wordpress Web
+name: "PHP-FPM Wordpress Web • Docker Build"
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: [ "Docker Image PHP-FPM Wordpress" ]
+    workflows: [ "PHP-FPM Wordpress • Docker Build" ]
     branches: [ main ]
     types:
       - completed
+  pull_request:
   push:
     paths:
       - images/php-fpm/wordpress-web/.trigger
     branches:
       - main
 jobs:
-  php-fpm-wordpress-web:
-    name: php-fpm/wordpress-web
+  test:
+    name: "Run tests"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: "Install bashunit"
+        run: |
+          curl -s https://bashunit.typeddevs.com/install.sh | bash -s -- /usr/local/bin
+
+      - name: "Test"
+        run: 'find images/php-fpm/wordpress-web/ -name "*_test.sh" -type f -print0 | xargs -0 -t bashunit'
+
+  build:
+    name: "Build php-fpm/wordpress-web"
+    needs: [ test ]
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
     strategy:
