lint: fix hadolint issues

--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -2,10 +2,10 @@
 ---
 name: "Spelling"
 on:
-  pull_request: null
   push:
     branches:
       - "main"
+  pull_request:
 permissions:
   contents: "read"
 concurrency:
