--- a/.github/workflows/main-docker-image-php-fpm-shopware-web.yml
+++ b/.github/workflows/main-docker-image-php-fpm-shopware-web.yml
@@ -31,8 +31,8 @@ jobs:
 
   build:
     name: "Build php-fpm/shopware-web"
-    needs: [ test ]
     runs-on: ubuntu-latest
+    needs: [ test ]
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
     strategy:
       matrix:
@@ -115,6 +115,8 @@ jobs:
         if: ${{ matrix.DEFAULT_IMAGE == 'true' }}
         with:
           context: images/php-fpm/shopware-web/context
+          build-contexts: |
+            scripts=images/_php-fpm-common/shopware-web
           file: images/php-fpm/shopware-web/Dockerfile
           push: true
           platforms: "linux/amd64,linux/arm64"
@@ -130,6 +132,8 @@ jobs:
         if: ${{ matrix.DEFAULT_IMAGE != 'true' }}
         with:
           context: images/php-fpm/shopware-web/context
+          build-contexts: |
+            scripts=images/_php-fpm-common/shopware-web
           file: images/php-fpm/shopware-web/Dockerfile
           push: true
           platforms: "linux/amd64,linux/arm64"
